Fix sur le gap entre les cartes hébergement a marseille

--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,11 @@ body
     margin-right: 50px;
 }
 
+#div_milieu > div:nth-child(2)
+{
+    row-gap: 50px;
+}
+
 #div_milieu h1
 {
     font-family: 'Raleway', sans-serif;
@@ -30,11 +35,6 @@ body
 i
 {
     color: #0065FC;
-}
-
-section
-{
-    gap: 60px;
 }
 
 /* Modif pour header */
@@ -261,8 +261,9 @@ header
 {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-around;
-    gap: 10px 1%;
+    justify-content: space-between;
+    column-gap: 1%;
+    row-gap: 10px;
     flex: 1;
 }
 
@@ -280,6 +281,7 @@ header
     border: 4px solid white;
     border-radius: 15px;
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    margin: 1% 0 0 1%;
 }
 
 .hebergement:hover
